[package]
name = "example_lombok"
version = "0.1.0"
authors = ["carlosb <carlos.baezruiz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn="1.0"
quote = "1.0"
proc-macro2 = "1.0"

[lib]
name="lombok"
path="src/lib.rs"
proc-macro=true

[[bin]]
name="main"
path="src/main.rs"
