[package]
name = "p2p_example"
version = "0.1.0"
authors = ["Carlos B <mcflurry0@gmail.com>"]
edition = "2018"

[[bin]]
name="chat"
path="src/chat-example.rs"

[dependencies]
futures = "0.3.1"
env_logger = "0.7.1"
async-std="1.0"
libp2p = "0.16.1"
# libp2p-swarm = "0.16.1"
tokio = "0.1"
tokio-stdin-stdout = "0.1"
