[package]
name = "p2p_example"
version = "0.1.0"
authors = ["Carlos B <mcflurry0@gmail.com>"]
edition = "2018"

[lib]
name='p2pchat'
path='src/lib.rs'

[[bin]]
name="chat-client"
path="src/chat-client.rs"

[dependencies]
libp2p = { version= "0.49.0", features =["full"] }
bytes = "1"
futures = "0.3.1"
futures-timer = "3.0.2" # Explicit dependency to be used in `wasm-bindgen` feature
getrandom = "0.2.3" # Explicit dependency to be used in `wasm-bindgen` feature
instant = "0.1.11" # Explicit dependency to be used in `wasm-bindgen` feature
lazy_static = "1.2"
async-std = { version = "1.6.2", features = ["attributes"] }
async-trait = "0.1"
env_logger = "0.9.0"
clap = { version = "4.0.13", features = ["derive"] }
tokio = { version = "1.15", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread"] }

