[package]
name = "pub_sub_lib"
version = "0.1.0"
authors = ["carlosb <carlos.baezruiz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pub_sub"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tokio = { version = "0.2.17", features = ["net"] }
tokio-util = { version = "0.2", features = ["codec"] }
futures = "0.3"
bytes = "0.5.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono="0.4"

[dev-dependencies]
tokio = {version = "0.2.11", features = ["time", "macros"] }
