[package]
name = "pub_subs_lib"
version = "0.1.0"
authors = ["carlosb <carlos.baezruiz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.11", features = ["net"] }
tokio-util = { version = "0.2", features = ["codec"] }
futures = "0.3"
bytes = "0.5.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono="0.4"

[dev-dependencies]
tokio = {version = "0.2.11", features = ["time", "macros"] }
