[package]
name = "rust-ddd-example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
enum_dispatch = "0.3.7"
webrtc = "0.3.3"
tokio = { version = "1.13.0", features = ["full"] }
env_logger = "0.9.0"
clap = "3.0.4"
anyhow = "1.0.45"
log = "0.4.14"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
chrono = "0.4.19"
base64 = "0.13.0"
lazy_static = "1.4"
hyper = { version = "0.14.13", features = ["full"] }


[[bin]]
name="test-rtp"
path="src/play-from-disk-h264.rs"
