[package]
name = "semantic-version"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fstream = "0.1.2"
walkdir = "2.3.1"
argparse = "0.2.2"
colored = "1.9"
clap = {version="3.0.0-rc.7", features=["derive"]}
regex = "1.5.4"
