[package]
name = "test_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
log = "0.4.20"
serde = "1.0.190"
serde_derive = "1.0.190"
serde_json = "1.0.108"
wasm-logger = "0.2.0"
wasm-sockets = "1.0.0"
yew = { version = "0.20", features = ["csr"] }
