[package]
name = "bot_news"
version = "0.1.0"
authors = ["carlosb <carlos.baezruiz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
select = "0.4.3"
scraper = "0.11.0"
reqwest = {version = "0.10", features = ["blocking", "json"]}
dotenv="0.15.0"
teloxide = "0.2.0"
log = "0.4.8"
tokio = "0.2.11"
pretty_env_logger = "0.4.0"
url = "1.5.1"
