[package]
name = "web_app"
version = "0.1.0"
authors = ["Carlos B <mcflurry0@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
tera = "0.11.20"
tokio = {version = "0.2.*", features=["full"]}
futures = "0.3.4"


serde="1.0"
serde_json="1.0"
serde_derive="1.0"
mongodb="0.11.0"


[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["tera_templates", "json"]




[[bin]]
name="main"
path="src/main.rs"


[[bin]]
name="main_db"
path="src/main_db.rs"
