[package]
name = "web_app"
version = "0.1.0"
authors = ["Carlos B <mcflurry0@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.7"
tera = "0.11.20"
tokio = {version = "0.2.*", features=["full"]}
futures = "0.3.4"
log = "0.4.8"
dotenv="0.15.0"


serde="1.0"
serde_json="1.0"
serde_derive="1.0"
mongodb="0.11.0"

rust-crypto="^0.2"
rand="0.7.3"


[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["tera_templates", "json"]


[[bin]]
name="main"
path="src/main.rs"
