[package]
name = "tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.22.0", features = ["full"] }
tokio-util = { version = "0.7.0", features = ["full"] }
tokio-stream = "0.1"
bytes = "1.0.0"
futures = { version = "0.3.0", features = ["thread-pool"]}
http = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
log="0.4"
fragile="2.0.0"

[dev-dependencies]
rstest = "0.16.0"
pretty_assertions = "1"


[lib]
name = "tracker"
path = "src/lib.rs"

[[bin]]
name="main"
path="src/main.rs"
