[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version="0.8.4", features = ["ws"]  }
tokio = { version="1.47.1" , features=["rt-multi-thread"]}
tracing-subscriber = {version="0.3.20", features=["env-filter"] }
tracing = "0.1.41"
tower-http = { version = "0.5", features = ["fs", "trace"] }
qdrant-client = "1.15.0"
anyhow = "1.0.99"
fastembed = "5.1.0"
serde = { version = "1.0.219", features = ["derive"] }
axum-extra = { version = "0.10.1", features = ["query"] }
