[package]
name = "webapp"
version = "0.1.0"
authors = ["Carlos Baez <mcflurry0@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = [] }
web-sys = "0.3.78"
serde = { version = "1.0.219", features = ["derive"] }
gloo-net = "0.6.0"
serde_urlencoded = "0.7.1"
serde_json = "1.0.143"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
