[package]
name = 'rust-web-app'
version = "0.1.0"
authors = ["Carlos Baez"]
edition = "2018"

[dependencies]
rocket = "0.4.7"
tera = "0.11.20"
kdtree = "0.5.1"

serde="1.0"
serde_json="1.0"
serde_derive="1.0"

mongodb="0.3.11"


[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["tera_templates", "json"]


[[bin]]
name="main"
path="src/main.rs"

[[bin]]
name = "clients"
path="src/clients.rs"

[[bin]]
name = "client_db"
path="src/client_db.rs"
