[package]
name = "ex3"
version = "0.1.0"
authors = ["Carlos B <carlos.baezruiz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest="0.9.17"
select="0.4.2"
dynomite-derive = "0.4.1"
dynomite = "0.4.1"
log = "0.4"
failure = "0.1"
futures = "0.1"
futures-backoff = "0.1"
rusoto_core = "0.38"
uuid = { version = "0.7", features = ["v4"]}
tokio = "0.1"
lambda_runtime = "0.1"
serde="^1"
serde_json="^1"
serde_derive="^1"
simple_logger="^1"


