[package]
name = "ex5"
version = "0.1.0"
authors = ["Carlos B <carlos.baezruiz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure-functions = "0.8.0"
log = "0.4.6"
serde = { version = "1.0.91", features = ["derive"] }
serde_json = "1.0.39"

[features]
unstable = ["azure-functions/unstable"]
